# RubikCubeSolver

./: CMakeLists.txt  GenericRubiksClass.cpp  GenericRubiksClass.h  main.cpp
Model/: GenericRubiksClass.cpp  GenericRubiksClass.h  RubiksCube1dArray.cpp  RubiksCube3dArray.cpp  RubiksCubeBitboard.cpp
